--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,12 +7,13 @@ body{
 
 }
 
+
 header nav{
+    width:100%;
     display: flex;
     justify-content: space-around;/*pega todo o espaço que sobrar na linha e distribui igualmente entre os elementos, deixando o spaço igual em toda a linha*/
     align-items: center;
-    padding: 0px 310px 0px 0px;
-    gap: 430px;
+    padding: 20px 0;
     background-color: rgba(0, 0, 0, 0.863);
 }
 .logo{
@@ -60,4 +61,9 @@ border-radius: 8px;
 .perfil:hover{
     background-color: white;
     color: black;
+}
+
+
+#banner img{
+    width: 100%;
 }
