--- a/assets/CSS/styleform.css
+++ b/assets/CSS/styleform.css
@@ -1,5 +1,10 @@
-.container-Feedback{
+.container{
     display: flex;
-        flex-direction: column
-        ;
+}
+
+.container-formulario{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    
 }
