--- a/assets/CSS/footer.css
+++ b/assets/CSS/footer.css
@@ -12,17 +12,15 @@ footer{
     display: flex;
     justify-content: space-around;
     width: 100%; 
-    
 }
 .menu-rodape{
     padding: 15px;
 }
 
 .menu-rodape,  li{
-    list-style-type: none; /*remove os marcadores*/
+    list-style-type: none; 
     font-size: 20px;
     color: rgba(255, 255, 255, 0.815);
-    text-decoration: none;
 }
 a {
     text-decoration: none;
