--- a/assets/CSS/styleform.css
+++ b/assets/CSS/styleform.css
@@ -1,81 +1,65 @@
-#feedback{
+#feedback {
     display: flex;
     justify-content: center;
     margin-top: 40px;
-    
-    
 }
-
-
-.container{
+.container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px; /*aumentar espaço entre o form e mapa.*/
-    margin-bottom: 50px; /*usei pra dar espaço abaixo do section form*/
-    max-width: 1200px;
-    
+    gap: 20px;
+    margin-bottom: 50px;
 }
-
-.container-formulario form{
+.container-formulario form {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 500px;
     width: 100%;
     margin: 0 auto;
-    
-    
-    
-    
 }
-
-input{
+h4 {
+    font-size: 30px;
+    color: rgba(0, 0, 0, 0.815);
+    font-family: "Playfair Display", serif;
+    margin-bottom: 20px;
+    }
+input {
     height: 35px;
     border-radius: 20px;
-    
 }
-textarea{
+textarea {
     height: 190px;
     border-radius: 20px;
 }
-#telefone{
-    width: 320px;
-
+#telefone {
+    width: 300px;
 }
-button{
+button {
     height: 30px;
     background-color: #0056b3;
     color: white;
-    
 }
-
-.container-mapa iframe{
-    width: 100%;
+.container-mapa iframe {
     max-width: 450px;
 }
 
 
-@media screen and (max-width: 600px){
-    .container{
+@media screen and (max-width: 600px) {
+    .container {
         grid-template-columns: 1fr;
         ;
     }
-    .container-formulario form {
-        width: 100%; /* Ajusta o formulário para a largura completa */
-        max-width: 100%; /* Não limita a largura do formulário */
+    .cards-container {
+        grid-template-columns: 1fr;
     }
-
-    .container-mapa iframe {
-        width: 100%; /* Faz o mapa ocupar 100% da largura disponível */
-        max-width: 100%; /* Ajusta o mapa para a largura completa */
+    .sobre-container{
+        grid-template-columns: 1fr;
     }
-    #telefone{
+    #telefone {
         width: 100%;
         margin-bottom: 15px;
-        
     }
-    #email{
+    #email {
         width: 100%;
     }
-    
+
 }
